[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/SourceSerifPro-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/BG/IconRectBW.png" type="Texture" id=2]
[ext_resource path="res://resources/GameTheme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/TitleMenu.gd" type="Script" id=4]
[ext_resource path="res://sprites/icon.png" type="Texture" id=5]
[ext_resource path="res://sprites/textiletex.png" type="Texture" id=6]
[ext_resource path="res://nodes/Settings.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="TitleMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.454902, 0.109804, 0.109804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_right = -64.0
margin_bottom = -128.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 264.0
margin_top = 40.0
margin_right = 887.0
margin_bottom = 552.0
custom_constants/separation = -8

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 623.0
margin_bottom = 192.0

[node name="Icon2" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 192.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_top = 45.0
margin_right = 427.0
margin_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Caesiv"
align = 1
valign = 1

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 623.0
margin_bottom = 192.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 623.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 48 )

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 39.0
margin_top = 224.0
margin_right = 583.0
margin_bottom = 512.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 2

[node name="StartNormal" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
self_modulate = Color( 0, 0.541176, 0.0196078, 1 )
margin_right = 256.0
margin_bottom = 128.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer/StartNormal"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "48f"
text = "Start
Normal"
align = 1
valign = 1

[node name="StartHard" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
self_modulate = Color( 0, 0.541176, 0.0196078, 1 )
margin_left = 288.0
margin_right = 544.0
margin_bottom = 128.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer/StartHard"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "48f"
text = "Start
Hard"
align = 1
valign = 1

[node name="Settings" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
visible = false
self_modulate = Color( 1, 0.701961, 0.282353, 1 )
margin_top = 160.0
margin_right = 256.0
margin_bottom = 288.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "48f"
text = "Settings"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
self_modulate = Color( 0.792157, 0.376471, 0, 1 )
margin_top = 160.0
margin_right = 256.0
margin_bottom = 288.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "48f"
text = "Quit"
align = 1
valign = 1

[node name="Records" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
visible = false
self_modulate = Color( 1, 0.701961, 0.282353, 1 )
margin_left = 288.0
margin_top = 160.0
margin_right = 544.0
margin_bottom = 288.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer/Records"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "48f"
text = "Personal
Records"
align = 1
valign = 1

[node name="Settings" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/StartNormal" to="." method="_on_StartNormal_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/StartHard" to="." method="_on_StartHard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Records" to="." method="_on_Records_pressed"]
